# lexico-e-genero

./: .coveragerc  .editorconfig  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements_dev.txt  tox.ini
notebooks/: Testes de viabilidade.ipynb  Untitled.ipynb
src/lexicogenero/: grc.py  main.py
src/lexicogenero/ferramentas/: data.py  diorisis_reader.py  perseus_reader.py
src/lexicogenero/stats/: bayes.py  ferramentas.py
src/trabalholingcomp/: main.py
src/trabalholingcomp/ferramentas/: diorisis_reader.py
tests/: test_diorisis.py
text/: biblio.bib  main.tex
