[tool.poetry]
name = "lexicogenero"
version = "0.4.0"
description = "Léxico e gênero literário em Grego Antigo"
authors = ["Caio Geraldes <caio.geraldes@usp.br>"]
license = 'MIT'

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
stanza = "^1.3.0"
pandas = "^1.3.4"
numpy = "^1.21.4"
scipy = "^1.7.3"
tf-nightly-gpu = "^2.8.0-alpha.20211208"
keras = "^2.7.0"
cltk = "^1.0.21"
nltk = "^3.6.5"
spacy = "<3.0.0"
bs4 = "^0.0.1"
lxml = "^4.6.4"
python-dotenv = "^0.19.2"
betacode = "^1.0"
pygtrie = "^2.4.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.910"
pylint = "^2.12.2"
pytest = "^6.2.5"
pandas-stubs = "^1.2.0"
ipython = "^7.30.1"
jupyter = "^1.0.0"
notebook = "^6.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

