[tool.poetry]
name = "lexicogenero"
version = "0.6.3"
description = "Léxico e gênero literário em Grego Antigo"
authors = ["Caio Geraldes <caio.geraldes@usp.br>"]
license = 'MIT'

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.3.4"
numpy = "^1.21.4"
scipy = "^1.7.3"
cltk = "^1.0.21"
python-dotenv = "^0.19.2"
betacode = "^1.0"
pygtrie = "^2.4.2"
jupyter = "^1.0.0"
notebook = "^6.4.6"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.910"
coverage = "^5.5"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pandas-stubs = "^1.2.0"
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = ""
testpaths = [
    "tests",
]


[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

